# gps-ublox-n8m-rp2040

./: CMakeLists.txt  FreeRTOSConfig.h  main.c  raw data.txt
gps_ublox/: CMakeLists.txt  gps.c  gps.h  uart_config.c  uart_config.h  uart_rx.pio
